Fix: Remove duplicate /api in URLs and update start script to run both servers

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "concurrently \"next start\" \"node server/index.js\"",
     "lint": "next lint",
     "server": "node server/index.js",
-    "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
-    "start:prod": "concurrently \"npm start\" \"npm run server\""
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
